manifests/apps/paperless/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: apps
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - paperless.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: paperless-svc
          port: 8000
